--- a/source/EnhancedSyslogFilter.page
+++ b/source/EnhancedSyslogFilter.page
@@ -2,7 +2,7 @@ Menu="EnhancedSyslogSettings:4"
 Title="Syslog Filter"
 ---
 <?php
-/* Copyright 2015-2023, Dan Landon
+/* Copyright 2015-2025, Dan Landon
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -11,17 +11,11 @@ Title="Syslog Filter"
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
  */
-$plugin = "enhanced.log";
-$docroot = $docroot ?? $_SERVER['DOCUMENT_ROOT'] ?: '/usr/local/emhttp';
-$translations = file_exists("$docroot/webGui/include/Translations.php");
-require_once "$docroot/plugins/$plugin/include/Legacy.php";
 ?>
-<?if (!$translations):?>
-<?eval('?>'.parse_file("$docroot/plugins/$plugin/EnhancedSyslogFilter.page"))?>
-<?else:?>
+
 <?
-// read translations
-parse_plugin('EnhancedSysLog');
+$file			= "/boot/config/plugins/enhanced.log/syslog_filter.conf";
+$text			= @file_get_contents($file);
 ?>
 
 <table class="tablesorter shift ups">
@@ -35,23 +29,13 @@ parse_plugin('EnhancedSysLog');
 > Enter the log strings you want to filtered from the Syslog.  Each entry is on a separate line with leading and trailing quotes.
 :end
  
-<?
-$file = "/boot/config/plugins/enhanced.log/syslog_filter.conf";
-$text = file_get_contents($file);
-$default_text = @file_get_contents("$file-");
-if ($default_text === false) $default_text = $text;
-?>
-<script>
-function setDefault(form) {
-  form.elements['text'].value = <?=json_encode($default_text);?>;
-}
-</script>
 <div style="width: 80%; float:left">
 	<form markdown="1" method="POST" action="/update.php" target="progressFrame">
 	<input type="hidden" name="#include" value="/webGui/include/update.file.php">
+	<input type="hidden" name="#raw_file" value="true">
 	<input type="hidden" name="#file" value="<?=$file;?>">
 
-	: <textarea spellcheck="false" cols="80" rows="22" maxlength="2048" name="text" style="font-family:bitstream;width:70%"><?=$text;?></textarea>
+	: <textarea spellcheck="false" cols="80" rows="22" maxlength="2048" name="text" style="font-family:bitstream;width:70%;"><?=htmlspecialchars($text);?></textarea>
 
 	<dl><dt>&nbsp;</dt><dd>
 		<form name="apply_syslog_filter" method="POST" action="/update.php" target="progressFrame">
@@ -67,4 +51,3 @@ function setDefault(form) {
 
 	</form>
 </div>
-<?endif;?>
