--- a/source/EnhancedSyslogFilter.page
+++ b/source/EnhancedSyslogFilter.page
@@ -26,25 +26,22 @@ $text			= @file_get_contents($file);
 > Enter the log strings you want to filtered from the Syslog.  Each entry is on a separate line with leading and trailing quotes.
 :end
  
-<div style="width: 80%; float:left">
-	<form markdown="1" method="POST" action="/update.php" target="progressFrame">
-	<input type="hidden" name="#include" value="/webGui/include/update.file.php">
-	<input type="hidden" name="#raw_file" value="true">
-	<input type="hidden" name="#file" value="<?=$file;?>">
+<form markdown="1" method="POST" action="/update.php" target="progressFrame">
+<input type="hidden" name="#include" value="/webGui/include/update.file.php">
+<input type="hidden" name="#raw_file" value="true">
+<input type="hidden" name="#file" value="<?=$file;?>">
 
-	: <textarea spellcheck="false" cols="80" rows="22" maxlength="2048" name="text" placeholder='Example: "spinning down" to filter spin down messages' style="font-family:bitstream;width:70%;"><?=htmlspecialchars($text);?></textarea>
+&nbsp;
+<textarea spellcheck="false" cols="80" rows="17" maxlength="2048" name="text" placeholder='Example: "spinning down" to filter spin down messages' style="font-family:bitstream;width:50%;"><?=htmlspecialchars($text);?></textarea>
 
-	<dl><dt>&nbsp;</dt><dd>
-		<form name="apply_syslog_filter" method="POST" action="/update.php" target="progressFrame">
-			<input type="hidden" name="#command" value="/plugins/enhanced.log/scripts/rc.enhanced.log">
-			<input type="submit" value="_(Apply)_"><input type="button" value="_(Done)_" onclick="done()">
-		</form>
-	</dd></dl>
+&nbsp;
+<span class="inline-block">
+	<input type="submit" value='_(Apply)_'><input type="button" value="_(Done)_" onclick="done()">
+</span>
 
 :enhanced_log_filter_buttons_plug:
-	> Click the **Apply** button to Apply the Syslog filter. Click **Reset** to
-	> undo any changes you make before you have saved the Syslog filter. Click **Done** to exit this page.
+> Click the **Apply** button to Apply the Syslog filter. Click **Reset** to
+> undo any changes you make before you have saved the Syslog filter. Click **Done** to exit this page.
 :end
 
-	</form>
-</div>
+</form>
